Opened 7 years ago

Closed 5 years ago

Last modified 5 years ago

#14525 closed bug (fixed)

[Package Kit] some strings are not localized

Reported by: diver Owned by: nielx
Priority: normal Milestone: R1/beta2
Component: Kits/Package Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking: #15525
Platform: All

Description

Some strings used in SoftwareUpdater are not yet localized.

https://github.com/haiku/haiku/blob/master/src/kits/package/RefreshRepositoryRequest.cpp

"Fetching repository checksum from "
"Validating checksum for "
"Fetching repository-cache from "
"Activating repository cache for "

Change History (14)

comment:1 by nielx, 7 years ago

Owner: changed from humdinger to nielx
Status: assignedin-progress

I'll have a look at this after B1 is released

comment:2 by humdinger, 5 years ago

Blocking: 15525 added

comment:4 by nielx, 5 years ago

Resolution: fixed
Status: in-progressclosed

Fixed in hrev54043

comment:5 by nielx, 5 years ago

Milestone: UnscheduledR1/beta2

Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone

comment:6 by diver, 5 years ago

Resolution: fixed
Status: closedreopened

The strings are now translated but the translations are not applied. Could be related to #15904.

in reply to:  6 comment:7 by nielx, 5 years ago

Replying to diver:

The strings are now translated but the translations are not applied. Could be related to #15904.

There is a possible relation, but it is not the same problem, since these strings are part of libpackage.so.

The general init of the catalogs for a library are in BLocaleRoster::_InitializeCatalog(), which uses a similar method of finding the catalog as libbe does (as described in the other ticket). First step would be to verify that method.

in reply to:  6 comment:8 by nielx, 5 years ago

Replying to diver:

The strings are now translated but the translations are not applied. Could be related to #15904.

How did you reproduce this issue?

comment:9 by diver, 5 years ago

Switch to russian locale (or any other which has these strings translated) and Run SoftwareUpdater.

comment:10 by nielx, 5 years ago

I tried it with a homebrew build of hrev54105 and the German locale, and I did get translated messages. They also showed up in a pkgman update call (though mixed with English, as expected).

comment:11 by diver, 5 years ago

Resolution: fixed
Status: reopenedclosed

After updating from hrev54088 to hrev54105 it works. Except from "Nothing to do" which seems to come from libsolv library.

in reply to:  11 comment:12 by nielx, 5 years ago

Replying to diver:

After updating from hrev54088 to hrev54105 it works. Except from "Nothing to do" which seems to come from libsolv library.

I don't find that string in the libsolv library though.

comment:13 by diver, 5 years ago

Indeed, found it here: src/bin/pkgman/pkgman.cpp:91

in reply to:  13 comment:14 by nielx, 5 years ago

Replying to diver:

Indeed, found it here: src/bin/pkgman/pkgman.cpp:91

Right, and we have the policy not to localize command line applications further.

(though this change shows how difficult it is to fully adhere to that policy when we start localizing non-gui libraries).

Note: See TracTickets for help on using tickets.